--- a/home/styles.css
+++ b/home/styles.css
@@ -15,11 +15,15 @@ nav.navbar {
   grid-template-areas:
     'status map'
     'instruction map';
+  min-height: 0;
 }
 
 img.map {
   grid-area: map;
-  max-width: 100%;
+  height: 100%;
+  min-width: 0;
+  min-height: 0;
+  justify-self: end;
 }
 
 .status-text {
